Add new mods to modpack
- GeckoLib
- Season's Greetings
- Tom's Trading Network

--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,11 @@
       "required": true
     },
     {
+      "projectID": 1150262,
+      "fileID": 5998927,
+      "required": true
+    },
+    {
       "projectID": 429235,
       "fileID": 5850121,
       "required": true
@@ -102,6 +107,11 @@
     {
       "projectID": 602171,
       "fileID": 5968872,
+      "required": true
+    },
+    {
+      "projectID": 854496,
+      "fileID": 5845239,
       "required": true
     },
     {
@@ -262,6 +272,11 @@
     {
       "projectID": 404468,
       "fileID": 5882217,
+      "required": true
+    },
+    {
+      "projectID": 388172,
+      "fileID": 5874016,
       "required": true
     },
     {
